add new type: long long integer

--- a/tools/abus-send.1
+++ b/tools/abus-send.1
@@ -29,6 +29,7 @@ as described below.
 b:  boolean, ie. true or false
 f:  double float
 i:  integer
+l:  long long integer
 s:  string
 a:  array
 e:  end of array
