--- a/trunk/tools/abus-send.1
+++ b/trunk/tools/abus-send.1
@@ -91,20 +91,20 @@ and the interface member are separate fields.
 .SH OPTIONS
 The following options are supported:
 .TP
-.I "\-t, \-\-timeout=TIMEOUT"
+.I "\-t TIMEOUT"
 Timeout in milliseconds to wait for the RPC response.
 .TP
-.I "\-h, \-\-help"
+.I "\-h"
 \fIabus\-send\fP usage help message.
 .TP
-.I "\-v, \-\-verbose"
+.I "\-v"
 Enable verbose mode.
 .TP
-.I "\-V, \-\-version"
-Display versio of A\-Bus and exit.
+.I "\-V"
+Display version of A\-Bus and exit.
 .TP
-.I "\-y, \-\-async"
-Asynchronous query.
+.I "\-y"
+Asynchronous query, through A-Bus system socket.
 
 .SH AUTHOR
 abus\-send was written by Stephane Fillod.
